--- a/main.html
+++ b/main.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Student Table</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <!-- Centered Bold Heading -->
+    <h2 style="text-align: center;">Student Details</h2>
+
+    <!-- Table -->
+    <table style="background: yellow; border: 2px solid black; border-collapse: collapse; margin: auto;">
+        <tr>
+            <th style="font-weight: bold; border: 2px solid black;">NAME</th>
+            <th style="font-weight: bold; border: 2px solid black;">AGE</th>
+            <th style="font-weight: bold; border: 2px solid black;">BRANCH</th>
+        </tr>
+        <tr>
+            <td style="border: 2px solid black;">Shaw</td>
+            <td style="border: 2px solid black;">20</td>
+            <td style="border: 2px solid black;">CSE</td>
+        </tr>
+        <tr>
+            <td style="border: 2px solid black;">Adil</td>
+            <td style="border: 2px solid black;">21</td>
+            <td style="border: 2px solid black;">ECE</td>
+        </tr>
+    </table>
 
 </body>
 
